--- a/src/components/repositoryDetail/repositoryDetail.module.css
+++ b/src/components/repositoryDetail/repositoryDetail.module.css
@@ -1,9 +1,18 @@
-.form{
-    width: 45%;
-    margin-top: 24px;
-    margin-left: 16px;
+.form {
+    width: 45% !important;
+    margin: 24px 0 16px 16px;
 }
 
 .confirmButton {
     width: 20%;
+}
+
+.body {
+    width: 90%;
+    margin: 20px auto 0 auto;
+}
+
+.progressLoader {
+    padding-top: 30px;
+    padding-left: 30px;
 }
