--- a/src/components/navigationBar/navigationBar.module.css
+++ b/src/components/navigationBar/navigationBar.module.css
@@ -5,9 +5,10 @@ img {
 
 .navlink {
     margin: auto;
+    padding-right: 20px !important;
 }
 
 .navBrand{
-    margin: auto;
-    padding-right: 40px;
+    margin: auto !important;
+    padding-right: 10px;
 }
